# loopjs

./: .cursorignore  .cursorrules  .cursorrules-deployment  .env.deploy  .gcloudignore  .gitignore  AI_INTEGRATION_GUIDE.md  AUTHENTICATION_TEST_RESULTS.md  AUTO_DEPLOY.md  CHANGES_SUMMARY.md  CLIENT_BUILD_GUIDE.md  CREATE_ADMIN_USER.md  CURSOR_DEPLOYMENT.md  DEBUGGING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  FIGMA_IMPORT_GUIDE.md  FIGMA_MCP_SETUP.md  FIGMA_MCP_TROUBLESHOOTING.md  FIGMA_UI_SPECIFICATION.html  FIGMA_UI_SPECIFICATION.md  FINAL_DEPLOYMENT_STEPS.md  FINAL_DEPLOYMENT_SUMMARY.md  FRONTEND_DEBUGGING_GUIDE.md  GEMINI.md  GET_DEPLOYMENT_TOKENS.md  HVNC_IMPLEMENTATION_SUMMARY.md  HVNC_INTEGRATION_EXAMPLE.md  HVNC_UI_ACCESS_GUIDE.md  HVNC_UI_DEVELOPMENT_GUIDE.md  LOCAL_TESTING_REPORT.md  MONGODB_QUICK_SETUP.md  (+43 more)
.cursor/: ai-memory.md  context.md  settings.json
.github/: DEPLOYMENT_FIX.md
Client/: CMakeLists.txt  DownloadThread.h  FileDownloader.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h
StealthClient/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BUILD_INSTRUCTIONS.md  CMakeCache.txt  CMakeLists.txt  README.md  WindowsSystemService.sln  WindowsSystemService.vcxproj  WindowsSystemService_DLL.vcxproj  WindowsSystemService_DLL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build_linux.sh  build_macos.sh  build_stealth.bat  build_windows.bat  cmake_install.cmake  evasion.h  injection.h  main.cpp  manifest.xml  memory_evasion.h  network.h  persistence.h  rat_features.h  test_CMakeLists.txt  test_client.cpp  test_stealth.bat  version.rc  version.rc.in
StealthClient/WindowsSystemService.dir/Release/: svchost.exe.recipe  svchost.iobj  version.res
StealthClient/WindowsSystemService.dir/Release/WindowsS.79B8D50A.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
StealthClient/WindowsSystemService_DLL.dir/Release/: msvcr120.dll.recipe  msvcr120.iobj
StealthClient/WindowsSystemService_DLL.dir/Release/WindowsS.65BEE287.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  WindowsSystemService_DLL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
StealthClient/deploy/: install.bat  uninstall.bat
StealthClient/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
StealthClient/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
StealthClient/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
StealthClient/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
automation/: MASTER_CONTROL.bat
backend/: .dockerignore  .env  .env.example  .env.mongodb  .env.production  .env.production.example  .gcloudignore  AI_INTEGRATION_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  MONGODB_SETUP.md  MULTI_MODEL_STATUS.md  OLLAMA_ANALYSIS.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  VERIFICATION_GUIDE.md  app.yaml  auto-monitor.js  check-test-progress.js  clear-agents.js  cloudbuild.yaml  create-admin-directly.js  create-admin.js  create_test_archive.js  create_test_msi.js  create_test_user.js  debug_client.js  debug_client_final.js  debug_client_new.js  debug_import.txt  deploy-container.js  deploy-wordful.js  (+37 more)
clients/qt-client/: BUILD-INSTRUCTIONS.md  CMakeLists.txt  Dockerfile  DownloadThread.h  FileDownloader.h  Makefile  Makefile.Debug  Makefile.Release  README-BUILD.md  README.md  SysManagePro.pro  build-docker.sh  build-linux.sh  build-production.bat  build-release.bat  build-release.sh  build-standalone.bat  build.bat  config.json  create-final-single-exe.ps1  create-sfx-exe.ps1  create-single-exe.bat  create-true-single-exe.ps1  main_debug.cpp  mainwindow.cpp  mainwindow.h  merge-dlls.ps1  setup-build-env.bat  setup-ssl.ps1  verify-build.bat  version.rc
clients/qt-client/SysManagePro-Single-Package/: SysManagePro-Launcher.bat
clients/qt-client/build-linux/: CMakeCache.txt
clients/qt-client/build-standalone/: CMakeCache.txt  Makefile  cmake_install.cmake
clients/qt-client/build-standalone/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
clients/qt-client/build-standalone/SysManagePro_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
clients/qt-client/build-standalone/SysManagePro_autogen/EWIEGA46WW/: moc_DownloadThread.cpp.d  moc_FileDownloader.cpp  moc_FileDownloader.cpp.d  moc_mainwindow.cpp.d
clients/qt-client/deployment/: README.txt  SysManagePro-SFX.bat  SysManagePro-SFX.ps1
clients/qt-client/final-deployment/: SysManagePro-Final-Single.bat  SysManagePro-Final-Single.ps1
clients/qt-client/release/: moc_DownloadThread.cpp  moc_FileDownloader.cpp  moc_mainwindow.cpp
clients/stealth-client/: CMakeLists.txt  README.md  anti_detection.cpp  anti_detection.h  build.bat  command_handler.cpp  command_handler.h  config.json  hvnc_handler.cpp  hvnc_handler.h  json_utils.cpp  json_utils.h  main.cpp  system_info.cpp  system_info.h  websocket_client.cpp  websocket_client.h
clients/stealth-client/build-single/: CMakeCache.txt  Makefile  build.bat  cmake_install.cmake
clients/stealth-client/build-standalone/: CMakeCache.txt  Makefile  cmake_install.cmake
clients/stealth-client/core/: injection.h
clients/stealth-client/core/encryption/: dynamic_keys.cpp  dynamic_keys.h  string_encryption.cpp  string_encryption.h  xor_cipher.cpp  xor_cipher.h
clients/stealth-client/core/evasion/: control_flow.cpp  control_flow.h  dynamic_api.cpp  dynamic_api.h  etw_evasion.cpp  etw_evasion.h  hardware_evasion.cpp  hardware_evasion.h  memory_protection.cpp  memory_protection.h  process_doppelganging.cpp  process_doppelganging.h  sandbox_detection.cpp  sandbox_detection.h  string_obfuscation.cpp  string_obfuscation.h
(+447 files in other folders)
